--- a/day04/Cargo.toml
+++ b/day04/Cargo.toml
@@ -6,11 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rayon = "1.5.0"
+# itertools = "0.12.0"
+# rayon = "1.5.0"
 
 [dev-dependencies]
-divan = "0.1.3"
+divan = "0.1.3" 
 
 [[bench]]
-name = "day01"
+name = "day04"
 harness = false
